@@ -10,10 +10,12 @@ import junit.framework.TestCase;
 
 public class JaxRsPathSegmentTest extends TestCase {
 
+    @Override
     protected void setUp() throws Exception {
         super.setUp();
     }
 
+    @Override
     protected void tearDown() throws Exception {
         super.tearDown();
     }
